--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,5 +21,5 @@ jobs:
       with:
         command: sudo systemctl restart exilence.service
         host: 142.132.227.44
-        username: ${{ secrets.USER }}
+        username: root
         password: ${{ secrets.SECRET }}
