--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,27 +1,16 @@
-name: command test 
+name: Command via SSH
 
-on:
-  push:
-    branches: [ dev ]
-  pull_request:
-    branches: [ dev ]
-
-defaults:
-  run:
-    working-directory: ExilenceNextBackend
+on: push
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - name: Run SSH command
-      uses: garygrossgarten/github-action-ssh@v0.3.0
-      with:
-        command: sudo systemctl restart exilence.service
-        host: 142.132.227.44
-        username: ${{ secrets.USER }}
-        password: ${{ secrets.SECRET }}
-        tryKeyboard: true
-        port: 22
+      - name: ls -a via OPEN SSH Private Key
+        uses: garygrossgarten/github-action-ssh@release
+        with:
+          command: ls -a
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          password: ${{ secrets.SECRET }}
