Updated test workflows

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,10 +1,10 @@
-name: .NET
+name: Release to Exilence Backend CI/CD
 
-on:
-  push:
-    branches: [ dev ]
-  pull_request:
-    branches: [ dev ]
+# on:
+#   push:
+#     branches: [ dev ]
+#   pull_request:
+#     branches: [ dev ]
 
 defaults:
   run:
@@ -15,20 +15,20 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
     - uses: actions/checkout@v2
-    - name: Setup .NET
+    - name: Setup .NET Core 3.1.x
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.x
-    - name: Publish
+    - name: Publish release artifacts
       run: dotnet publish -c release -r ubuntu.18.04-x64 -o deploy
-    - name: Stop service
+    - name: Stop backend service
       uses: garygrossgarten/github-action-ssh@v0.3.0
       with:
         command: sudo systemctl stop exilence-next.service
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USER }}
         password: ${{ secrets.SECRET }}
-    - name: Copy files
+    - name: Copy release artefacts
       uses: garygrossgarten/github-action-scp@v0.5.3
       with:
         local:  /home/runner/work/exilence-next/exilence-next/ExilenceNextBackend/deploy
@@ -36,7 +36,7 @@ jobs:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USER }}
         password: ${{ secrets.SECRET }}
-    - name: Start service
+    - name: Start backend service
       uses: garygrossgarten/github-action-ssh@v0.3.0
       with:
         command: sudo systemctl start exilence-next.service
