Updated test workflow

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,10 +1,10 @@
 name: Release to Exilence Backend CI/CD
 
-# on:
-#   push:
-#     branches: [ dev ]
-#   pull_request:
-#     branches: [ dev ]
+on:
+  push:
+    branches: [  ]
+  pull_request:
+    branches: [  ]
 
 defaults:
   run:
