--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,10 +1,7 @@
 name: Release to Exilence Backend CI/CD
 
-on:
-  push:
-    branches: [  ]
-  pull_request:
-    branches: [  ]
+on: 
+  workflow_dispatch:
 
 defaults:
   run:
