--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -11,7 +11,8 @@ jobs:
   build:
     runs-on: ubuntu-18.04
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout branch
+      uses: actions/checkout@v2
     - name: Setup .NET Core 3.1.x
       uses: actions/setup-dotnet@v1
       with:
