--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -42,6 +42,7 @@
     "mobx-react-lite": "^3.2.0",
     "mobx-utils": "^6.0.1",
     "moment": "^2.24.0",
+    "moment-duration-format": "^2.3.2",
     "poe-log-monitor": "^1.2.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -90,6 +91,7 @@
     "@types/electron-is-dev": "^1.1.1",
     "@types/jest": "26.0.15",
     "@types/lodash": "^4.14.187",
+    "@types/moment-duration-format": "^2.2.3",
     "@types/node": "14.14.2",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.6",
